objects/INX_Repository__c.object
<CustomObject>
    <fields>
        <fullName>INX_Format__c</fullName>
        <label>Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Main_Branch__c</fullName>
        <label>Main Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Needs_Review__c</fullName>
        <label>Needs Review</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INX_Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Remote__c</fullName>
        <label>Remote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Source_Path__c</fullName>
        <label>Source Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Repository</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INX_Remote__c</columns>
        <columns>INX_Source_Path__c</columns>
        <columns>INX_Main_Branch__c</columns>
        <columns>INX_Is_Active__c</columns>
        <columns>INX_Format__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>